[gd_scene load_steps=10 format=3 uid="uid://cqauvklo0l13j"]

[ext_resource type="Script" path="res://Scenes/DefaultUnit/Unit.gd" id="1_sp27m"]
[ext_resource type="Texture2D" uid="uid://ompg3iyrakdd" path="res://Art/SkelyBoyParts.png" id="2_gd6du"]

[sub_resource type="Animation" id="Animation_wcrx5"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0sv0i"]
resource_name = "Slash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.000488281, 0.000322145, 0.000488281),
"update": 0,
"values": [Vector2(11, 3), Vector2(1, -10), Vector2(11, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.00182233, 0.00317286, 0.00276214),
"update": 0,
"values": [0.0, -0.219394, 0.0]
}

[sub_resource type="Animation" id="Animation_ngwlp"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_puky4"]
_data = {
"Idle": SubResource("Animation_wcrx5"),
"Slash": SubResource("Animation_0sv0i"),
"Walk": SubResource("Animation_ngwlp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hh6ob"]
radius = 6.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c4te3"]
radius = 81.0987

[sub_resource type="CircleShape2D" id="CircleShape2D_4np5g"]
radius = 30.0

[node name="Unit" type="CharacterBody2D"]
script = ExtResource("1_sp27m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_puky4")
}

[node name="Art" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="Art"]
position = Vector2(0, 10)
texture = ExtResource("2_gd6du")
region_enabled = true
region_rect = Rect2(42, 46, 12, 8)

[node name="Body" type="Sprite2D" parent="Art"]
position = Vector2(0, 4)
texture = ExtResource("2_gd6du")
region_enabled = true
region_rect = Rect2(40, 16, 16, 12)

[node name="Weapon" type="Sprite2D" parent="Art"]
position = Vector2(11, -7)
texture = ExtResource("2_gd6du")
region_enabled = true
region_rect = Rect2(2, 38, 10, 22)

[node name="Head" type="Sprite2D" parent="Art"]
position = Vector2(0, -10)
texture = ExtResource("2_gd6du")
region_enabled = true
region_rect = Rect2(38, 0, 20, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hh6ob")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="AttackPosition" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="SenseRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SenseRange"]
shape = SubResource("CircleShape2D_c4te3")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_4np5g")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="SenseRange" to="." method="_on_sense_range_body_entered"]
[connection signal="body_exited" from="SenseRange" to="." method="_on_sense_range_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
